--- a/mackay/frontend/wound-chat/package.json
+++ b/mackay/frontend/wound-chat/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.25.4",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
