--- a/mackay/frontend/wound-chat/package.json
+++ b/mackay/frontend/wound-chat/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.14",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.1",
