--- a/mackay/frontend/wound-chat/package.json
+++ b/mackay/frontend/wound-chat/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve-lan": "vue-cli-service serve --mode lan",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
