--- a/mackay_frontend/wound-chat/.env.production
+++ b/mackay_frontend/wound-chat/.env.production
@@ -2,4 +2,4 @@ NODE_ENV=production
 # VUE_APP_GOOGLE_STORAGE_BUCKET=//storage.googleapis.com/develop-static/
 VUE_APP_IP4=/
 VUE_APP_SERVER_PATH=/
-VUE_APP_PATH=/
+VUE_APP_PATH=//127.0.0.1:8000/
