--- a/mackay_frontend/wound-chat/.env.development
+++ b/mackay_frontend/wound-chat/.env.development
@@ -2,3 +2,6 @@ NODE_ENV=development
 VUE_APP_IP4=127.0.0.1
 VUE_APP_SERVER_PATH=//127.0.0.1:8000/
 VUE_APP_PATH=//127.0.0.1:3000/
+VUE_APP_LINE_ID=2006462026
+VUE_APP_LINE_SECRET=5d9bbfbaeb564b6bae32765e79c20ab2
+VUE_APP_LINE_CALLBACK=http://127.0.0.1:3000/
