--- a/mackay_frontend/wound-chat/package.json
+++ b/mackay_frontend/wound-chat/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "jwt-decode": "^2.2.0",
     "vue": "^2.6.14",
+    "vue-cli-plugin-pug": "^2.0.0",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
