--- a/mackay_frontend/wound-chat/.env.production
+++ b/mackay_frontend/wound-chat/.env.production
@@ -6,4 +6,4 @@ VUE_APP_PATH=//wdcare.net/
 VUE_APP_LINE_ID=2006754723
 VUE_APP_LINE_SECRET=313b67b3c810351c1396b450ac5c35e0
 VUE_APP_LINE_CALLBACK=https://wdcare.net/
-VUE_APP_LOGIN_CHECK=https://www.wdcare.net
+VUE_APP_LOGIN_CHECK=https://wdcare.net
