--- a/mackay_frontend/wound-chat/.env.lan
+++ b/mackay_frontend/wound-chat/.env.lan
@@ -4,7 +4,7 @@ NODE_ENV=development-lan
 VUE_APP_IP4=192.168.1.107
 VUE_APP_SERVER_PATH=http://192.168.1.107:8000/
 VUE_APP_PATH=http://192.168.1.107:3000/
-VUE_APP_IMG_PATH=https://storage.googleapis.com/mackay-static/
+VUE_APP_IMG_PATH=https://storage.googleapis.com/wdcare-file-storage/
 VUE_APP_LINE_ID=2006462026
 VUE_APP_LINE_SECRET=5d9bbfbaeb564b6bae32765e79c20ab2
 VUE_APP_LINE_CALLBACK=http://192.168.1.107:3000/
