--- a/mackay_frontend/wound-chat/.env.production
+++ b/mackay_frontend/wound-chat/.env.production
@@ -1,7 +1,7 @@
 NODE_ENV=production
 VUE_APP_IP4=/
 VUE_APP_SERVER_PATH=//wdcare.net/
-VUE_APP_IMG_PATH=https://storage.googleapis.com/mackay-static/
+VUE_APP_IMG_PATH=https://storage.googleapis.com/wdcare-file-storage/
 VUE_APP_PATH=//wdcare.net/
 VUE_APP_LINE_ID=2006754723
 VUE_APP_LINE_SECRET=313b67b3c810351c1396b450ac5c35e0
